--- a/v1/index.html
+++ b/v1/index.html
@@ -9,45 +9,12 @@
     <style>
         body { font-family: Arial, sans-serif; background-color: #f8f9fa; }
         .container { margin-top: 50px; }
-        .challenge-card { 
-            background: white; padding: 50px; border-radius: 15px; 
-            box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.1); text-align: center; 
-            cursor: pointer; transition: background-color 0.3s ease; 
-            font-size: 1.5rem; width: 300px; height: 150px; 
-            display: flex; align-items: center; justify-content: center; 
-        }
+        .challenge-card { background: white; padding: 50px; border-radius: 15px; box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.1); text-align: center; cursor: pointer; transition: background-color 0.3s ease; font-size: 1.5rem; width: 300px; height: 180px; display: flex; align-items: center; justify-content: center; }
         .challenge-card.correct { background-color: #28a745; color: white; }
         .challenge-card.incorrect { background-color: #dc3545; color: white; }
-        .challenge-card h5 {
-            font-size: 1.5rem; /* Ensures the question text inside is larger */
-        }
-        /* Overlay to dim the background */
-        .overlay {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0, 0, 0, 0.5); display: none; z-index: 1500;
-        }
-
-        /* Hint Popup */
-        .hint-popup {
-            display: none; position: fixed; top: 50%; left: 50%;
-            transform: translate(-50%, -50%); background: white; 
-            padding: 20px; border-radius: 10px; 
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center; z-index: 2000;
-        }
-        
-        /* Cyan-colored close button */
-        .btn-close {
-            filter: none; /* Removes the color change */
-        }
-        .challenge-card h5 {
-            font-weight: bold;
-        }
-        .navbar .navbar-brand {
-            font-size: 2rem; /* Adjust size as needed */
-            font-weight: bold; /* Optional: Make it bold */
-        }
-
+        .hint-popup { display: none; position: fixed; top:50%; left:50%; transform: translate(-50%, -50%); background: white; padding: 20px; border-radius: 10px; box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); text-align: center; z-index: 2000; }
+        .hint-popup .close-btn { cursor: pointer; color: red; font-weight: bold; }
+        .challenge-card h5 { font-weight: bold; }
         .navbar .container { display: flex; justify-content: center; }
     </style>
 </head>
@@ -61,9 +28,6 @@
     <div class="container">
         <div class="challenge-grid d-flex flex-wrap justify-content-center gap-3" id="question-container"></div>
     </div>
-
-    <!-- Overlay -->
-    <div class="overlay" id="overlay"></div>
 
     <!-- Modal -->
     <div class="modal fade" id="questionModal" tabindex="-1" aria-hidden="true">
@@ -82,7 +46,7 @@
     <!-- Hint Popup -->
     <div class="hint-popup" id="hintPopup">
         <p id="hintText"></p>
-        <button class="btn btn-info" onclick="closeHint()">Close</button>
+        <button class="btn btn-secondary" onclick="closeHint()">Close</button>
     </div>
 
     <script>
@@ -118,19 +82,19 @@
                 let fileName = question.attachment.split('/').pop();
                 downloadButton = `<a href="${question.attachment}" class="btn btn-success mt-2" download>${fileName}</a>`;
             }
+            document.getElementById("modalTitle").textContent = question.question;
             let hintButtons = "";
             if (question.hints && question.hints.length > 0) {
                 hintButtons = question.hints.map((hint, idx) => 
                     `<button class="btn btn-info mt-2" onclick="showHint('${hint}')">Hint ${idx + 1}</button>`
                 ).join(" ");
             }
-            document.getElementById("modalTitle").innerHTML = `<strong>${question.question}</strong>`;
             document.getElementById("modalBody").innerHTML = `
                 <p style="white-space: pre-line;">${question.description}</p>
                 ${downloadButton}
-                <div class="mt-2">${hintButtons}</div>
                 <input type="text" class="form-control flag-input mt-2" placeholder="Enter flag">
                 <button class="btn btn-primary mt-2" onclick="checkFlag(this, '${question.answer}', ${card.dataset.index})">Submit</button>
+                ${hintButtons}
                 <p class="result mt-2"></p>
             `;
             new bootstrap.Modal(document.getElementById("questionModal")).show();
@@ -157,12 +121,10 @@
         function showHint(hint) {
             document.getElementById("hintText").innerHTML = hint;
             document.getElementById("hintPopup").style.display = "block";
-            document.getElementById("overlay").style.display = "block"; // Show overlay
         }
 
         function closeHint() {
             document.getElementById("hintPopup").style.display = "none";
-            document.getElementById("overlay").style.display = "none"; // Hide overlay
         }
 
         loadQuestions();
